split guest into sync and async versions; add tests
Signed-off-by: Joel Dice <joel.dice@fermyon.com>

--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -10,3 +10,9 @@ clap_derive = "4.5.4"
 tokio = { version = "1.36.0", features = ["fs", "process", "macros", "rt-multi-thread", "time"] }
 wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "async" }
 wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "async" }
+
+[dev-dependencies]
+reqwest = "0.12.3"
+tempfile = "3.10.1"
+wasm-compose = { git = "https://github.com/dicej/wasm-tools", branch = "async" }
+wit-component = { git = "https://github.com/dicej/wasm-tools", branch = "async" }
