--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -12,6 +12,7 @@ wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "async" }
 wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "async" }
 
 [dev-dependencies]
+pretty_env_logger = "0.5.0"
 reqwest = "0.12.3"
 tempfile = "3.10.1"
 wasm-compose = { git = "https://github.com/dicej/wasm-tools", branch = "async" }
