--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -13,6 +13,7 @@ wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "async" }
 wasi-http-draft = { path = "../http" }
 
 [dev-dependencies]
+flate2 = "1.0.30"
 futures = "0.3.30"
 pretty_env_logger = "0.5.0"
 reqwest = "0.12.3"
