--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = { version = "1.0.81", features = ["backtrace"] }
 clap = { version = "4.5.4", features = ["derive"] }
 clap_derive = "4.5.4"
 tokio = { version = "1.36.0", features = ["fs", "process", "macros", "rt-multi-thread", "time"] }
-wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "async" }
+wasmtime = { git = "https://github.com/dicej/wasmtime", branch = "async", features = ["component-model-async"] }
 wasmtime-wasi = { git = "https://github.com/dicej/wasmtime", branch = "async" }
 wasi-http-draft = { path = "../http" }
 
