--- a/middleware/Cargo.toml
+++ b/middleware/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 futures = "0.3.30"
 once_cell = "1.19.0"
 wit-bindgen = { git = "https://github.com/dicej/wit-bindgen", branch = "async" }
+wit-bindgen-rt = { git = "https://github.com/dicej/wit-bindgen", branch = "async" }
 flate2 = "1.0.28"
 
 [lib]
