--- a/yield-caller/Cargo.toml
+++ b/yield-caller/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 futures = "0.3.30"
 once_cell = "1.19.0"
 wit-bindgen = { git = "https://github.com/dicej/wit-bindgen", branch = "async" }
+wit-bindgen-rt = { git = "https://github.com/dicej/wit-bindgen", branch = "async" }
 
 [lib]
 crate-type = ["cdylib"]
