add test host<->guest stream/future dynamic API
Signed-off-by: Joel Dice <joel.dice@fermyon.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,6 @@ members = [
   "poll",  
   "yield-callee",
   "yield-caller",
-  "cancel-callee",
-  "cancel-caller",
+  "transmit-callee",
+  "transmit-caller",
 ]
