test callback-less (AKA stackful) async lifts
Signed-off-by: Joel Dice <joel.dice@fermyon.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "backpressure-callee",
   "backpressure-caller",  
   "guest-async",
+  "guest-async-stackful",  
   "guest-sync",
   "guest-wait",
   "http-echo",
